# pose-estimation

./: .gitignore  CMakeLists.txt  README.md
config/: calib_t460s_720p.yml
doc/: .~lock.coordinate-conversion.doc#  coordinate-conversion.doc
include/: PnPSolver.hpp  PoseSolver.hpp
samples/: monoCapture.cpp  pose.cpp  stereoCapture.cpp  vpose.cpp
src/: PnPSolver.cpp  PoseSolver.cpp
